--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -82,11 +82,15 @@ h5 {
 
 .main {
   max-width: 1050px;
-  margin: 0 auto;
-  padding: 30px 15px;
+  margin: 0 auto 0;
+  padding: 0 15px 30px;
 
   @include breakpoint($bp--mid) {
-    padding: 40px 30px;
+    padding: 0 20px 30px;
+  }
+  @include breakpoint($bp--large) {
+    margin-top: 0;
+    padding-top: 40px;
   }
 }
 
@@ -227,7 +231,7 @@ img {
 .grid {
   @include clearfix();
 
-  @include breakpoint($bp--mid) {
+  @include breakpoint($bp--large) {
     margin-left: -15px;
     margin-right: -15px;
   }
@@ -235,32 +239,32 @@ img {
 
 .col {
   padding: 0 0 30px 0;
-  @include breakpoint($bp--mid) {
+  @include breakpoint($bp--large) {
     float: left;
     padding: 0 15px 30px;
   }
 }
 
 .col--2-3 {
-  @include breakpoint($bp--mid) {
+  @include breakpoint($bp--large) {
     width: 66.66%;
   }
 }
 
 .col--1-3 {
-  @include breakpoint($bp--mid) {
+  @include breakpoint($bp--large) {
     width: 33.33%;
   }
 }
 
 .col--3-4 {
-  @include breakpoint($bp--mid) {
+  @include breakpoint($bp--large) {
     width: 70%;
   }
 }
 
 .col--1-4 {
-  @include breakpoint($bp--mid) {
+  @include breakpoint($bp--large) {
     width: 30%;
   }
 }
