--- a/components/30-components/singlepage/singlepage.scss
+++ b/components/30-components/singlepage/singlepage.scss
@@ -3,16 +3,27 @@
 
 .grid {
   .sticky {
+    margin-top: 120px;
     @include breakpoint($bp--large) {
       margin-top: 55px;
+      width: 300px !important;
   
       .breadcrumb {
         padding-top: 30px;
         display: block;
       }
     }
+
+    .col--1-4 {
+      padding-bottom: 0;
+      @include breakpoint($bp--large) {
+        width: 100%;
+      }
+    }
   }
+
   .col--1-4 {
+    padding-bottom: 0;
     @include breakpoint($bp--large) {
       position: initial;
     }
@@ -27,46 +38,42 @@
 }
 
 .sticky__wrapper {
+  left: 0 !important;
   position: absolute;
+  width: 100% !important;
+  z-index: 9;
   @include breakpoint($bp--large) {
-    position: initial;
     height: auto;
-  }
-}
-
-/**
- * Hack the sticky menu so it doesn't cover the page content
- * while maintaining its position on the page.
- */
-.grid .sticky[style] {
-  @include breakpoint($bp--large) {
-    width: 300px !important;
-    z-index: 9;
-
-    .col--1-4 {
-      width: 100%;
-    }
+    position: initial;
+    width: auto;
   }
 }
 
 .nav-anchor {
   h2.active__section {
     color: #000;
-    background: $color--gray-5;
-    border: 1px solid $color--gray-7;
+    background-color: $color--gray-1;
+    border: 1px solid $color--gray-4;
+    font-size: 24px;
+    line-height: 24px;
     margin: 0;
+    padding: 8px 15px 10px;
+    @include breakpoint($bp--mid) {
+      padding: 8px 20px 10px;
+    }
     @include breakpoint($bp--large) {
       display: none;
     }
-    .fa {
+    + .fa {
+      border-left: 1px solid $color--gray-4;
       color: #000;
-      border-left: 1px solid $color--gray-7;
-      line-height: 53px;
+      cursor: pointer;
+      line-height: 42px;
       right: 0;
-      padding-left: 10px;
+      padding: 0 20px;
       position: absolute;
-      width: 38px;
-      top: 0;
+      top: 1px;
+      width: 57px;
       z-index: 1;
     }
   }
@@ -76,11 +83,32 @@
   }
 
   ul {
+    background-color: #fff;
+    border-bottom: 1px solid $color--gray-4;
     list-style-type: none;
-    &.nav-anchor__top-level {
-      display: none;
-      @include breakpoint($bp--large) {
-        display: block;
+    display: none;
+    &.open {
+      display: block;
+    }
+    @include breakpoint($bp--large) {
+      display: block;
+    }
+      
+    &.nav-anchor__second-level {
+      border: none;
+      margin-bottom: 0;
+    
+      li {
+        margin-left: 1rem;
+      }
+    
+      a {
+        padding: .75rem 0 .75rem 1rem;
+        font-size: 13px;
+        line-height: 1.25;
+        @include breakpoint($bp--large) {
+          font-size: 14px;
+        }
       }
     }
   }
@@ -88,19 +116,23 @@
   li {
     list-style-type: none;
     margin: 0;
-    border-bottom: 1px solid $color--gray-4;
+    border-top: 1px solid $color--gray-4;
     position: relative;
 
     .fa {
-      position: absolute;
-      top: 0;
-      right: 0;
-      line-height: 53px;
-      width: 38px;
-      z-index: 1;
       border-left: 1px solid $color--gray-4;
-      padding-left: 10px;
-      background: white;
+      color: $color--gray-7;
+      cursor: pointer;
+      line-height: 49px;
+      padding: 0 12px;
+      position: absolute;
+      right: 0;
+      top: 1px;
+      width: 41px;
+      z-index: 1;
+      &:hover {
+        background-color: $color--gray-1;
+      }
 
       @include breakpoint($bp--large) {
         display: none;
@@ -112,30 +144,18 @@
     padding: .75rem 0 .75rem .75rem;
     display: block;
     color: $color--blue;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: normal;
+    @include breakpoint($bp--large) {
+      font-size: 18px;
+    }
 
     &:hover,
     &.active {
+      background-color: $color--gray-1;
       color: $color--gray-7;
       text-decoration: none;
-      background-color: $color--gray-1;
     }
   }
 }
 
-.nav-anchor__second-level {
-  margin-bottom: 0;
-
-  li {
-    border: none;
-    margin-left: 1rem;
-    border-bottom: 1px solid $color--gray-4;
-  }
-
-  a {
-    padding: .75rem 0 .75rem 1rem;
-    font-size: 14px;
-    line-height: 1.25;
-  }
-}
