--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -171,3 +171,11 @@
 .c3-area {
   opacity: 1;
 }
+
+/* Move label in stacked area chart under bar, change colors */
+.c-bar {
+  .c3-text {
+    transform: translate(0, 15px);
+    fill: #000 !important;
+  }
+}
