--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -21,9 +21,9 @@
 .c-text__viz-notes {
   font-size: 12px;
   color: black;
-  line-height: 1.2;
+  line-height: 1.3;
   background: url('./img/urban-line.svg') no-repeat bottom right;
-  padding-bottom: 1rem;
+  padding-bottom: 1.5rem;
 
   @include breakpoint($bp--large) {
     padding-bottom: .5rem;
@@ -37,6 +37,10 @@
 }
 
 .c-graph {
+  .c-graph__wrapper {
+    height: 347px;
+  }
+
   .c-graph__container {
     height: 320px;
   }
@@ -171,3 +175,4 @@
 .c3-area {
   opacity: 1;
 }
+
