[UICA-122] - Set x labels to be vertical on mobile. Increased graph height for mobile.

--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -38,11 +38,17 @@
 
 .c-graph {
   .c-graph__wrapper {
-    height: 347px;
+    height: 387px;
+    @include breakpoint($bp--large) {
+      height: 347px;
+    }
   }
 
   .c-graph__container {
-    height: 320px;
+    height: 360px;
+    @include breakpoint($bp--large) {
+      height: 320px;
+    }
   }
 
   &__options {
