--- a/components/30-components/singlepage/singlepage.scss
+++ b/components/30-components/singlepage/singlepage.scss
@@ -36,7 +36,7 @@
   }
 }
 
-.sticky__wrapper {
+.sticky-nav {
   left: 0 !important;
   position: absolute;
   width: 100% !important;
@@ -106,6 +106,12 @@
     &.nav-anchor__second-level {
       border: none;
       margin-bottom: 0;
+      @include breakpoint($bp--large) {
+        display: none;
+        &.open {
+          display: block;
+        }
+      }
     
       li {
         margin-left: 1rem;
@@ -113,7 +119,7 @@
     
       a {
         padding: .75rem 0 .75rem 15px;
-        font-size: 13px;
+        font-size: 14px;
         line-height: 1.25;
         @include breakpoint($bp--mid) {
           padding-left: 20px;
@@ -146,10 +152,6 @@
       &:hover {
         background-color: $color--gray-1;
       }
-
-      @include breakpoint($bp--large) {
-        display: none;
-      }
     }
   }
 
@@ -157,13 +159,14 @@
     padding: .75rem 0 .75rem 15px;
     display: block;
     color: $color--blue;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: normal;
     @include breakpoint($bp--mid) {
       padding-left: 20px;
     }
     @include breakpoint($bp--large) {
       font-size: 18px;
+      line-height: 25px;
       padding-left: .75rem;
     }
 
