--- a/components/30-components/graphs/multiples/multiples.scss
+++ b/components/30-components/graphs/multiples/multiples.scss
@@ -7,6 +7,11 @@
   .c-graph-multiple {
     width: 200px;
     float: left;
+
+    h2 {
+      font-size: 13px;
+      margin-left: 20px;
+    }
   }
 }
 
