Added more graphs as examples, styled title

--- a/components/30-components/graphs/multiples/multiples.scss
+++ b/components/30-components/graphs/multiples/multiples.scss
@@ -11,6 +11,11 @@
     h2 {
       font-size: 13px;
       margin-left: 20px;
+      font-style: italic;
+    }
+
+    .c-text__caption--bottom {
+      border: none;
     }
   }
 }
