--- a/components/30-components/graphs/multiples/multiples.scss
+++ b/components/30-components/graphs/multiples/multiples.scss
@@ -14,6 +14,10 @@
       font-style: italic;
     }
 
+    .c-text__caption {
+      display: none;
+    }
+
     .c-text__caption--bottom {
       border: none;
     }
