--- a/components/30-components/graphs/multiples/multiples.scss
+++ b/components/30-components/graphs/multiples/multiples.scss
@@ -4,6 +4,14 @@
 .c-graph-multiples {
   @include clearfix();
 
+  h2 {
+    font-size: 18px;
+  }
+
+  .c-text__caption {
+    clear: both;
+  }
+
   .c-graph-multiple {
     width: 200px;
     float: left;
