Set up constants for breakpoints in util with helper callback to reference them.

--- a/components/00-global/_breakpoints.scss
+++ b/components/00-global/_breakpoints.scss
@@ -1,4 +1,6 @@
 
+// Update helpers/util.jsx if these change.
+
 $bp--small: 400px; // Small-screen display
 $bp--mid: 640px; // Medium-screen display
 $bp--large: 960px; // Large-screen display
