--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -39,6 +39,9 @@
 .c-graph {
   .c-graph__wrapper {
     height: 387px;
+    @include breakpoint($bp--mid) {
+      height: 427px;
+    }
     @include breakpoint($bp--large) {
       height: 347px;
     }
@@ -46,6 +49,9 @@
 
   .c-graph__container {
     height: 360px;
+    @include breakpoint($bp--mid) {
+      height: 400px;
+    }
     @include breakpoint($bp--large) {
       height: 320px;
     }
