--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -34,8 +34,10 @@
 
 .header-site__logo-wrapper {
   background: white;
-  width: 120px;
+  position: relative;
+  z-index: 2;
   text-align: center;
+  width: 120px;
 
   @include breakpoint($bp--large) {
     float: left;
@@ -49,14 +51,22 @@
 }
 
 .header-site__right {
+  position: relative;
   @include breakpoint($bp--large) {
     margin-left: 0;
   }
 }
 
 .header-site__nav-primary-wrapper {
-  display: none;
   background-color: $color--blue;
+  display: none;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 50;
+  &.open {
+    display: block;
+  }
 
   @include breakpoint($bp--large) {
     display: block;
@@ -65,6 +75,8 @@
     clear: none;
     background-color: transparent;
     padding: 0.15rem 0 0 2rem;
+    position: initial;
+    z-index: 1;
   }
 }
 
@@ -102,7 +114,7 @@
   @include breakpoint($bp--large) {
     background: transparent;
     font-size: 24px;
-    line-height: 1.5;
+    line-height: 1.7;
     padding: 2.1rem 0 0 2rem;
     text-align: left;
   }
@@ -113,10 +125,11 @@
 }
 
 .header-site__nav-mobile {
+  cursor: pointer;
+  font-size: 20px;
   position: absolute;
   right: 13px;
   top: 27px;
-  font-size: 20px;
 
   @include breakpoint($bp--large) {
     display: none;
