--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -1,37 +1,75 @@
 @import '_global.scss';
 
 .nav-primary {
-  position: relative;
+  background-color: $color--blue;
 
   ul {
     position: relative;
-    display: table;
-    list-style-type: none;
     padding: 0;
     margin: 0;
+    @include breakpoint($bp--large) {
+      display: table;
+    }
   }
 
   li {
-    display: table-cell;
+    border-top: 1px solid #fff;
     list-style-type: none;
-    padding: 0 1rem 0 0;
+    margin: 0;
+    padding: 0;
+    position: relative;
 
-    @include breakpoint($bp--mid) {
+    @include breakpoint($bp--large) {
+      border-width: 0;
+      display: table-cell;
       padding: 0 0.7rem 0 0;
     }
     @include breakpoint($bp--xlarge) {
       padding: 0 1.1rem 0 0;
     }
 
-    ul {
-      display: none;
+    a {
+      display: block;
+      padding: 0 0 0 15px;
+      @include breakpoint($bp--mid) {
+        padding-left: 20px;
+      }
+      @include breakpoint($bp--large) {
+        display: inline-block;
+        padding-left: 0;
+      }
+    }
+    .fa {
+      border-left: 1px solid #fff;
+      color: #fff;
+      cursor: pointer;
+      line-height: 42px;
+      right: 0;
+      padding: 0 20px;
       position: absolute;
+      top: 0;
+      width: 57px;
+      z-index: 1;
+      &:hover {
+        background-color: $color--gray-2;
+      }
+      @include breakpoint($bp--large) {
+        display: none;
+      }
     }
 
-    &:hover,
-    &.active-trail {
-      ul {
-        display: table-cell;
+    ul {
+      display: none;
+      &.open {
+        display: block;
+      }
+    }
+    @include breakpoint($bp--large) {
+      &:hover,
+      &.active-trail {
+        ul {
+          display: table-cell;
+        }
       }
     }
     &.active-trail ul {
@@ -45,6 +83,10 @@
 }
 
 .nav-primary__first-level {
+  border-bottom: 1px solid #fff;
+  @include breakpoint($bp--large) {
+    border-width: 0;
+  }
   & > li {
     &.has-submenu:hover,
     &.active-trail {
@@ -55,61 +97,63 @@
         height: 94px;
       }
     }
-
-    &:hover > a,
+    > a:hover,
     &.active > a,
     &.active-trail > a {
+      background-color: $color--gray-2;
       color: black;
-      border-bottom: 6px solid black;
       text-decoration: none;
     }
 
-    ul {
-      position: fixed;
-      left: 0px;
-      width: 100%;
-      text-align: center;
-
-      li {
-        display: inline-block;
+    @include breakpoint($bp--large) {    
+      &:hover > a,
+      &.active > a,
+      &.active-trail > a {
+        background-color: transparent;
+        border-bottom: 6px solid black;
+        color: black;
       }
-    }
+      ul {
+        left: 0px;
+        position: fixed;
+        text-align: center;
+        width: 100%;
 
-    &:nth-child(4) {
-      ul {
-        left: auto;
-        right: 0;
+        li {
+          display: inline-block;
+        }
       }
-    }
-    &:nth-child(5) {
-      ul {
-        left: auto;
-        right: 0;
+
+      &:nth-child(4) {
+        ul {
+          left: auto;
+          right: 0;
+        }
+      }
+      &:nth-child(5) {
+        ul {
+          left: auto;
+          right: 0;
+        }
       }
     }
 
     a {
-      display: inline-block;
       color: #fff;
-      font-size: 15px;
-      font-weight: normal;
+      font-size: 20px;
       font-family: $font-lato;
-      line-height: 26px;
-      border-bottom: 6px solid transparent;
-
-      @include breakpoint($bp--mid) {
-        font-size: 14px;
-        line-height: 30px;
-      }
+      font-weight: normal;
+      line-height: 42px;
 
       @include breakpoint($bp--large) {
-        line-height: 40px;
+        border-bottom: 6px solid transparent;
         font-size: 14px;
+        line-height: 40px;
         padding-bottom: 2px;
       }
       @include breakpoint($bp--xlarge) {
-        line-height: 33px;
         font-size: 16px;
+        line-height: 33px;
         padding-top: 20px;
       }
     }
@@ -117,31 +161,42 @@
 }
 
 ul.nav-primary__second-level {
-  background-color: #fff;
-  line-height: 10px;
-  width: auto;
   z-index: 15;
-  border-bottom: 1px solid $color--gray-3;
+  padding-left: 15px;
+  @include breakpoint($bp--mid) {
+    padding-left: 20px;
+  }
+  @include breakpoint($bp--large) {
+    border-bottom: 1px solid $color--gray-3;
+    background-color: #fff;
+    line-height: 10px;
+    padding-left: 0;
+    position: absolute;
+    width: auto;
+  }
 
   li {
     margin: 0;
     padding: 0;
 
     a {
-      background-color: #fff;
-      color: $color--gray-8;
-      font-size: 15px;
+      border-width: 0;
+      font-size: 17px;
       font-weight: normal;
-      line-height: 40px;
-      border-bottom: 0;
+      line-height: 36px;
 
-      @include breakpoint($bp--mid) {
-        padding: 11px .5rem;
-      }
       @include breakpoint($bp--large) {
+        background-color: #fff;
+        color: $color--gray-8;
         font-size: 13px;
         line-height: 20px;
         padding: 9px .8rem;
+
+        &:hover,
+        &.active {
+          color: $color--gray-8;
+          text-decoration: none;
+        }
       }
       @include breakpoint($bp--xlarge) {
         font-size: 14px;
@@ -150,8 +205,9 @@ ul.nav-primary__second-level {
 
       &:hover,
       &.active {
-        text-decoration: none;
         background-color: $color--gray-2;
+        color: #000;
+        text-decoration: none;
       }
     }
   }
