--- a/components/30-components/singlepage/singlepage.scss
+++ b/components/30-components/singlepage/singlepage.scss
@@ -55,26 +55,33 @@
     background-color: $color--gray-1;
     border: 1px solid $color--gray-4;
     font-size: 24px;
-    line-height: 24px;
+    line-height: 30px;
+    overflow: hidden;
     margin: 0;
-    padding: 8px 15px 10px;
+    padding: 5px 62px 7px 15px;
+    position: relative;
     @include breakpoint($bp--mid) {
-      padding: 8px 20px 10px;
+      padding: 5px 77px 7px 20px;
     }
     @include breakpoint($bp--large) {
       display: none;
     }
-    + .fa {
+    .fa {
       border-left: 1px solid $color--gray-4;
       color: #000;
       cursor: pointer;
       line-height: 42px;
+      height: 110px;
       right: 0;
-      padding: 0 20px;
+      padding: 0 15px;
       position: absolute;
-      top: 1px;
-      width: 57px;
+      top: 0;
+      width: 47px;
       z-index: 1;
+      @include breakpoint($bp--mid) {
+        width: 57px;
+        padding: 0 20px;
+      }
       @include breakpoint($bp--large) {
         display: none;
       }
