--- a/components/20-templates/default/components/nav-utility.scss
+++ b/components/20-templates/default/components/nav-utility.scss
@@ -4,24 +4,45 @@
   position: relative;
 
   ul {
+    border-bottom: 1px solid #fff;
     list-style-type: none;
     padding: 0;
     margin: 0;
+    @include breakpoint($bp--large) {
+      border-width: 0;
+    }
   }
 
   li {
-    display: inline-block;
+    border-top: 1px solid #fff;
     list-style-type: none;
-    margin: 0 0.25rem 0 0;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    @include breakpoint($bp--large) {
+      border-width: 0;
+      display: inline-block;
+      margin: 0 0.25rem 0 0;
+    }
   }
 
   a {
     background: black; /*lighten($color--blue, 10);*/
-    display: inline-block;
-    font-weight: normal;
-    font-size: 13px;
-    padding: 0 0.5rem;
     color: white;
+    display: block;
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 40px;
+    padding: 0 15px;
+    @include breakpoint($bp--mid) {
+      padding: 0 20px;
+    }
+    @include breakpoint($bp--large) {
+      display: inline-block;
+      font-size: 13px;
+      line-height: inherit;
+      padding: 0 0.5rem;
+    }
 
     &:hover {
       text-decoration: none;
