--- a/components/30-components/singlepage/singlepage.scss
+++ b/components/30-components/singlepage/singlepage.scss
@@ -125,7 +125,7 @@
       }
     
       a {
-        padding: .75rem 0 .75rem 15px;
+        padding: .75rem 45px .75rem 15px;
         font-size: 14px;
         line-height: 1.25;
         @include breakpoint($bp--mid) {
@@ -149,15 +149,18 @@
       border-left: 1px solid $color--gray-4;
       color: $color--gray-7;
       cursor: pointer;
-      line-height: 49px;
-      padding: 0 12px;
+      line-height: 53px;
+      padding: 0 14px;
       position: absolute;
       right: 0;
-      top: 1px;
-      width: 41px;
+      top: 0;
+      width: 45px;
       z-index: 1;
       &:hover {
         background-color: $color--gray-1;
+      }
+      @include breakpoint($bp--large) {
+        line-height: 49px;
       }
     }
   }
