Make all fonts Latos

--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -1,5 +1,12 @@
 @import '_global.scss';
 
+.c-graph {
+  .c-graph__container svg {
+    font-family: Lato, san-serif;
+  }
+}
+
+
 .c-text__caption {
   font-size: 14px;
   overflow: hidden;
