--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -6,7 +6,6 @@
   }
 }
 
-
 .c-text__caption {
   font-size: 14px;
   overflow: hidden;
@@ -196,16 +195,21 @@
 }
 
 /* Move label in stacked area chart under bar, change colors */
-.c-bar.c-bar-vertical {
+.c-bar.c-bar-vertical.c-bar-grouped {
   .c3-text {
     transform: translate(0, 15px);
-    fill: #000 !important;
   }
 }
-.c-bar.c-bar-horizontal {
+.c-bar.c-bar-horizontal.c-bar-grouped {
   .c3-text {
     transform: translate(-10px, 0);
     text-anchor: end;
+  }
+}
+
+/* Ensure all data label colors are black */
+.c-bar {
+  .c3-text {
     fill: #000 !important;
   }
 }
