--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -222,8 +222,9 @@
     padding: 0.6rem;
     padding-right: 100px;
     font-size: 16px;
+    border: none;
     border-radius: 0;
-    -webkit-appearance: none;
+    appearance: none;
     outline-width: 0;
   }
 }
