Remove the title bar when header goes into mini mode

--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -172,6 +172,7 @@
     .header-site__title {
       animation: header-hide $header-transition-duration ease;
       animation-fill-mode: forwards;
+      display: none;
     }
 
     .header-site__logo-wrapper {
