--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -214,10 +214,6 @@ ul.nav-primary__second-level {
   0% {}
   100% { line-height: 20px; }
 }
-@keyframes nav-hide {
-  0% {}
-  100% { height: 0; opacity: 0; display: none; }
-}
 
 .header-site.header-sticky {
   @include breakpoint($bp--large) {
@@ -241,6 +237,7 @@ ul.nav-primary__second-level {
         > a {
           animation: nav-mini $header-transition-duration ease;
           animation-fill-mode: forwards;
+          line-height: 20px;
           padding-top: 0;
         }
       }
