Updates to have more consistent non-rendered graph height to help with scrolling

--- a/components/30-components/graphs/multiples/multiples.scss
+++ b/components/30-components/graphs/multiples/multiples.scss
@@ -12,6 +12,13 @@
     clear: both;
   }
 
+  .c-graph {
+    .c-graph__wrapper,
+    .c-graph__container {
+      height: 210px;
+    }
+  }
+
   .c-graph-multiple {
     width: 225px;
     float: left;
