--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -214,9 +214,7 @@ table {
   height: 110px;
   width: 110px;
   margin: 0 auto;
-  background-color: $color--gray-8;
-  -webkit-mask:  url('./components/img/icon-teaching.svg') no-repeat 50% 50%;
-  mask: url('./components/img/icon-teaching.svg') no-repeat 50% 50%;
+  background: url('./components/img/icon-teaching.svg') no-repeat 50% 50%;
 
   @include breakpoint($bp--mid) {
     height: 100%;
@@ -228,9 +226,7 @@ table {
   height: 110px;
   width: 110px;
   margin: 0 auto;
-  background-color: $color--gray-8;
-  -webkit-mask:  url('./components/img/icon-student.svg') no-repeat 50% 50%;
-  mask: url('./components/img/icon-student.svg') no-repeat 50% 50%;
+  background: url('./components/img/icon-student.svg') no-repeat 50% 50%;
 
   @include breakpoint($bp--mid) {
     height: 100%;
