Remove ticks from all bar charts

--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -198,6 +198,10 @@
   .c3-text {
     fill: #000 !important;
   }
+  /* Hide ticks on bar charts */
+  .tick line {
+    display: none;
+  }
 }
 
 .c-graph_dropdown {
