First attempt at reviving animations

--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -167,7 +167,7 @@
     animation: header-mini $header-transition-duration ease;
     animation-fill-mode: forwards;
     border-top: 0;
-    max-height: 55px;
+    height: 55px;
 
     .header-site__title {
       animation: header-hide $header-transition-duration ease;
@@ -179,16 +179,34 @@
       @include breakpoint($bp--large) {
         animation: header-logo-wrapper $header-transition-duration ease;
         animation-fill-mode: forwards;
-        max-height: 70px;
-        max-width: 55px;
         .header-site__logo {
           animation: header-logo $header-transition-duration ease;
           animation-fill-mode: forwards;
           background: url('./img/logo-mini-dark.png') no-repeat 10%;
           background-size: 75%;
-          max-height: 55px;
-          max-width: 55px;
         }
+      }
+    }
+  }
+}
+
+/* IE9 Hacks. Relies on javascript to apply some arbitrary  */
+body.ie9 .header-site.header-sticky {
+  @include breakpoint($bp--large) {
+    border-top: 0;
+    height: 55px !important;
+
+    .header-site__title {
+      visibility: none;
+      display: block !important;
+    }
+
+    .header-site__logo-wrapper[style] {
+      height: 70px !important;
+      width: 55px !important;
+      .header-site__logo[style] {
+        height: 55px !important;
+        width: 55px !important;
       }
     }
   }
