--- a/components/30-components/singlepage/singlepage.scss
+++ b/components/30-components/singlepage/singlepage.scss
@@ -10,10 +10,11 @@
     @include breakpoint($bp--large) {
       margin-top: 55px;
       width: 300px !important;
-  
+
       .breadcrumb {
         padding-top: 30px;
         display: block;
+        min-height: 70px;
       }
     }
 
@@ -31,7 +32,7 @@
       position: initial;
     }
   }
-  
+
   .col--3-4 {
     @include breakpoint($bp--large) {
       float: right;
@@ -107,13 +108,13 @@
     @include breakpoint($bp--large) {
       display: block;
     }
-    
+
     &.nav-anchor__top-level {
       > li:first-child {
         border-top: none;
       }
     }
-      
+
     &.nav-anchor__second-level {
       border: none;
       margin-bottom: 0;
@@ -123,11 +124,11 @@
           display: block;
         }
       }
-    
+
       li {
         margin-left: 1rem;
       }
-    
+
       a {
         padding: .75rem 45px .75rem 15px;
         font-size: 14px;
