--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -143,7 +143,7 @@
 }
 
 .c3-grid line {
-  stroke: $color--gray-3;
+  stroke: #DEDDDD;
 }
 
 .c3-axis-y-label {
@@ -171,7 +171,7 @@
 }
 
 .c3-ygrids line {
-  stroke: #DEDEDE;
+  stroke: #DEDDDD;
 }
 
 .c-graph__y-label {
