small multiple sizing fix

--- a/components/30-components/graphs/multiples/multiples.scss
+++ b/components/30-components/graphs/multiples/multiples.scss
@@ -19,6 +19,9 @@
     }
   }
 
+  .c-graph-multiple.children_2 {
+    width: 345px;
+  }
   .c-graph-multiple {
     width: 225px;
     float: left;
