fixing right margin for line/area charts

--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -111,6 +111,9 @@
   }
 }
 
+.c-line__container .c3-axis-x g.tick:last-of-type, .c-area__container .c3-axis-x g.tick:last-of-type{
+  display: none;
+}
 .c-bar {
   margin-bottom: $space-half;
 }
