correct placement for format string

--- a/components/30-components/graphs/multiples/multiples.scss
+++ b/components/30-components/graphs/multiples/multiples.scss
@@ -15,7 +15,7 @@
   .c-graph {
     .c-graph__wrapper,
     .c-graph__container {
-      height: 210px;
+      height: 210px !important;
     }
   }
 
