left aligned small multiple legends, cross browser compatible

--- a/components/30-components/graphs/multiples/multiples.scss
+++ b/components/30-components/graphs/multiples/multiples.scss
@@ -61,7 +61,7 @@
 .small-multiple-legend{
   margin: 0 auto;
   width: 0px;
-  display: table;
+  display: inline;
 }
 .small-multiple-legend-container{
   margin-bottom: 20px;
