edge case tall small multiples

--- a/components/30-components/graphs/multiples/multiples.scss
+++ b/components/30-components/graphs/multiples/multiples.scss
@@ -18,6 +18,11 @@
       height: 210px !important;
     }
   }
+  .c-graph {
+    .c-graph__wrapper.tall_mult_exception{
+      height: 335px !important;
+    }
+  }
 
   .c-graph-multiple.children_2 {
     width: 345px;
