subtitle spacing and title lineheight for charts

--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -1,5 +1,8 @@
 @import '_global.scss';
 
+.graphTitle{
+  line-height: 22px;
+}
 .c-graph {
   .c-graph__container svg {
     font-family: $font-lato;
