--- a/components/30-components/graphs/graph/graph.scss
+++ b/components/30-components/graphs/graph/graph.scss
@@ -227,7 +227,7 @@
   }
 }
 
-.c-line__container .c3-axis-x g.tick:last-of-type, .c-area__container .c3-axis-x g.tick:last-of-type, .c-line__container .c3-axis-x g.tick:first-of-type, .c-area__container .c3-axis-x g.tick:first-of-type{
+.c-line__container .c3-axis-x g.tick:last-of-type, .c-area__container .c3-axis-x g.tick:last-of-type, .c-line__container:not(.noAxisPadding) .c3-axis-x g.tick:first-of-type, .c-area__container .c3-axis-x g.tick:first-of-type{
   display: none;
 }
 .c-bar {
