added global css transitions. Adjusted in-page scroll target. removed gray bar when empty.

--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -86,10 +86,10 @@
     &.has-submenu:hover,
     &.active-trail {
       @include breakpoint($bp--large) {
-        height: 86px;
+        //height: 86px;
       }
       @include breakpoint($bp--xlarge) {
-        height: 101px;
+        //height: 101px;
       }
     }
     > a:hover,
