--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -150,7 +150,7 @@
         font-size: 16px;
         //line-height: 33px;
         //padding-top: 20px;
-        padding-top: 13px;
+        //padding-top: 13px;
       }
     }
   }
