--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -13,10 +13,12 @@ body {
   line-height: 1.7;
 }
 
-a {
+a, a strong {
   color: $color--blue;
   text-decoration: none;
   font-weight: 800;
+
+
 
   &:hover {
     text-decoration: underline;
@@ -120,7 +122,7 @@ li {
 
 strong {
   font-weight: 800;
-  color: #333333;
+  color: #333333;  
 }
 
 em {
